tests/NormalTests/paczka2/big_fuzzy/71994863.err
Error in line 3: 8eXc6jneG S342 79,6
Error in line 29: 9ejDhuVrU A477 214,2
Error in line 32: 8eXc6jneG S342 16,39
Error in line 23: con A477 64,7
Error in line 26: kzDP0c S342 72,9
Error in line 36: kzDP0c A299 77,0
Error in line 35: 9ejDhuVrU A299 370,9
Error in line 46: 8eXc6jneG S342 32,4
Error in line 57: kzDP0c A477 92,9
Error in line 61: A31 A299 69,8
Error in line 78: kzDP0c A477 95,8
Error in line 73: 9ejDhuVrU A477 34,3
Error in line 88: kzDP0c A299 95,8
Error in line 102: A31 A31 59,3
Error in line 85: uyz8M6Ym0 S342 36,8
Error in line 100: 9ejDhuVrU S342 74,7
Error in line 115: con S342 92,8
Error in line 127: A31 A477 94,9
Error in line 132: A31 A31 15,5
Error in line 134: KKs A299 68,5
Error in line 135: KKs A477 2,3
Error in line 145: KKs S342 34,1
Error in line 154: A31 A299 5,2
Error in line 158: con A477 6,6
Error in line 151: 8eXc6jneG A299 84,3
Error in line 153: KKs A299 87,9
Error in line 175: 8eXc6jneG A299 32,1
Error in line 174: 9ejDhuVrU A299 53,4
Error in line 177: 8eXc6jneG A477 45,3
Error in line 203: uyz8M6Ym0 A31 1,20
Error in line 201: A31 A477 87,6
Error in line 200: kzDP0c A299 471,9
Error in line 231: uyz8M6Ym0 A477 18,11
Error in line 220: con A299 27,8
Error in line 230: 9ejDhuVrU A31 13,1
Error in line 236: 9ejDhuVrU A299 47,2
Error in line 240: KKs 477 56,7
Error in line 237: 8eXc6jneG A31 50,3
Error in line 243: KKs A477 49,1
Error in line 223: uyz8M6Ym0 A477 23,8
